[metadata]
name = adaptivefiltering
version = attr: adaptivefiltering.__version__
description = Adaptive Ground Point Filtering Library
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Click
    IPython==7.21.0
    adaptivefiltering-library
    gdal
    geodaisy
    geojson
    ipywidgets<8
    jsonmerge
    jsonschema==3.2.0
    numpy
    pyrsistent
    pytools
    xdg
    xmltodict
include_package_data = True

[options.entry_points]
console_scripts =
    extract_opals_schema = adaptivefiltering.opals:_automated_opals_schema
    upgrade_filter_library = adaptivefiltering.library:upgrade_filter_library

[options.package_data]
* =
    schema/*
