[metadata]
name = afwizard
version = attr: afwizard.__version__
description = Adaptive Filtering Wizard
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT License
license_file = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Click
    IPython==7.21.0
    afwizard-library
    gdal
    geojson
    ipyfilechooser
    ipywidgets==8.0.0b1
    ipywidgets-jsonschema
    jsonmerge
    jsonschema==3.2.0
    numpy
    pyrsistent
    pytools
    wrapt
    xdg
    xmltodict
include_package_data = True

[options.entry_points]
console_scripts =
    afwizard = afwizard.__main__:main
    extract_opals_schema = afwizard.opals:_automated_opals_schema
    upgrade_filter_library = afwizard.library:upgrade_filter_library

[options.package_data]
* =
    schema/*
