[metadata]
name = afwizard
version = attr: afwizard.__version__
description = Adaptive Filtering Wizard
long_description = file: README.md
long_description_content_type = text/markdown
author = Dominic Kempf
author_email = ssc@iwr.uni-heidelberg.de
license = MIT
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    Click
    IPython
    afwizard-library
    gdal==3.4.0
    geojson
    geojson-rewind
    ipyfilechooser
    ipyleaflet
    ipywidgets>=8
    ipywidgets-jsonschema
    jsonmerge
    jsonschema<4
    numpy
    pdal
    pillow
    pooch
    pyproj
    pyrsistent
    pytools
    wrapt
    xdg
    xmltodict
include_package_data = True

[options.entry_points]
console_scripts =
    afwizard = afwizard.__main__:main
    extract_opals_schema = afwizard.opals:_automated_opals_schema
    upgrade_filter_library = afwizard.library:upgrade_filter_library
    copy_afwizard_notebooks = afwizard.paths:copy_notebooks

[options.package_data]
* =
    data/*
    schema/*
    jupyter/*.ipynb
